# django-boilerplate-docker-compose-postgresql

./: .gitignore  Makefile  pyproject.toml
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
